add mobile styling

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,536 +1,1 @@
-/* PHASE 0: Reset */
-@import url("https://use.fontawesome.com/releases/v5.0.9/css/all.css");
-@import url("https://fonts.googleapis.com/css?family=Quicksand");
-@import url("https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css");
-@import url("https://www.w3schools.com/w3css/4/w3.css");
-html, body, header, nav, h1, a,
-ul, li, strong, main, button, i,
-section, img, div, h2, p, form,
-fieldset, label, input, textarea,
-span, article, footer, time, small {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font: inherit;
-  color: #666;
-  text-align: inherit;
-  text-decoration: inherit;
-  vertical-align: inherit;
-  box-sizing: inherit;
-  background: transparent;
-  font-family: "Quicksand", sans-serif;
-}
-
-ul {
-  list-style: none;
-}
-
-::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
-  color: gray;
-}
-
-label {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-input[type=password],
-input[type=email],
-input[type=text] {
-  padding: 5px 10px;
-}
-
-input[type=password],
-input[type=email],
-input[type=text],
-input[type=submit],
-textarea,
-button {
-  /*
-  Get rid of native styling. Read more here:
-  http://css-tricks.com/almanac/properties/a/appearance/
-  */
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
-button,
-input[type=submit] {
-  cursor: pointer;
-}
-
-/* Clearfix */
-.group::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-nav {
-  position: fixed;
-  padding-bottom: 3px;
-  margin-bottom: 75px;
-  z-index: 5;
-  height: 6vh;
-  top: 0;
-  width: 100%;
-  display: flex;
-  background-color: #222222;
-  align-items: center;
-  justify-content: space-between;
-}
-nav ul {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  width: 40%;
-  justify-content: space-around;
-  text-transform: uppercase;
-  font-weight: 800;
-  font-size: 18px;
-}
-nav a {
-  width: 50%;
-  height: 100%;
-}
-nav li {
-  color: white;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  border-bottom: 3px solid transparent;
-  text-shadow: 0.1px 0.1px 0.1px #000000;
-}
-nav li:hover {
-  border-bottom: 3px solid white;
-  transition: all 1s;
-}
-
-.selected {
-  border-bottom: 3px solid #83cd1f;
-  color: #83cd1f;
-  font-weight: 900;
-  transition: all 1s;
-}
-
-.avatar {
-  cursor: pointer;
-  z-index: 7;
-  position: fixed;
-  top: 20px;
-  left: 45%;
-  height: 150px;
-  width: 150px;
-  border-radius: 50%;
-  overflow: hidden;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-}
-.avatar img {
-  height: 100%;
-  object-fit: cover;
-  transition: opacity 1s;
-}
-
-h1 {
-  font-size: 36px;
-  font-weight: 999;
-  margin-bottom: 30px;
-}
-
-.skill-title {
-  text-align: center;
-  width: 60%;
-  margin: auto;
-}
-
-#skill, #project, #contact {
-  text-align: center;
-  padding: 15em 0 5em 0;
-}
-
-#project {
-  background-color: #f7f7f7;
-}
-
-.hidden {
-  display: none;
-}
-
-.skills {
-  width: 60%;
-  margin: auto;
-}
-.skills i {
-  cursor: pointer;
-  position: relative;
-  margin: 15px;
-  float: left;
-  font-size: 148px;
-}
-.skills .icon-wordmark {
-  padding-top: 60px;
-  text-shadow: 1px 1px 2px #000000;
-  color: white;
-  text-align: center;
-  font-weight: 999;
-  position: absolute;
-  height: 148px;
-  width: 148px;
-  top: 0;
-  left: 0;
-  font-size: 24px;
-}
-.skills i:hover {
-  opacity: 0.5;
-  transition: all 1s;
-}
-
-.footer {
-  margin-top: 200px;
-  padding-top: 30px;
-  background-color: #222222;
-  width: 100%;
-  height: 15vh;
-  text-align: center;
-}
-.footer div {
-  width: 50%;
-  margin: 30px auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-.footer div i {
-  color: white;
-  font-size: 48px;
-}
-.footer div i:hover {
-  transition: all 1s;
-}
-.footer div .fa-linkedin:hover {
-  color: #0073b1;
-}
-.footer div .fa-weibo:hover {
-  color: #df2029;
-}
-.footer div .fa-github-square:hover {
-  color: white;
-}
-.footer div .fa-facebook-square:hover {
-  color: #4267b2;
-}
-.footer div .fa-instagram:hover {
-  background-image: -webkit-linear-gradient(to right, #fa709a 0%, #fee140 100%);
-  background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: transparent;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-}
-.footer p {
-  margin-top: 30px;
-}
-
-.project-list {
-  width: 60%;
-  min-width: 600px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.single-project {
-  width: 45%;
-  height: 250px;
-  margin-bottom: 25px;
-}
-
-.single-project:hover {
-  box-shadow: 0px 8px 25px 0 rgba(0, 0, 0, 0.3);
-}
-
-.single-project:hover .project-cover {
-  opacity: 0;
-  transition: opacity 1s;
-}
-
-.project-screenshoot {
-  border-radius: 5px;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.project-screenshoot img {
-  height: 100%;
-  object-fit: cover;
-}
-
-.project-cover {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-shadow: 0.1px 0.1px 0.1px #000000;
-  transition: opacity 1s;
-}
-.project-cover h2 {
-  font-weight: bold;
-  font-size: 36px;
-  opacity: 1;
-  text-transform: capitalize;
-}
-
-.white {
-  background: rgba(255, 255, 255, 0.5);
-}
-.white h2 {
-  color: black;
-}
-
-.black {
-  background: rgba(0, 0, 0, 0.5);
-}
-.black h2 {
-  color: white;
-}
-
-.link {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.8);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
-  transition: background 1s ease, padding 1s linear;
-}
-.link p {
-  color: white;
-  margin: 0 20px;
-}
-.link div {
-  opacity: 0.5;
-}
-.link div i {
-  color: white;
-  font-size: 48px;
-}
-.link div:hover {
-  opacity: 1;
-  transition: opacity 1s;
-}
-
-#contact {
-  width: 60%;
-  margin: 50px auto;
-}
-#contact form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-#contact form div {
-  width: 100%;
-  display: flex;
-  align-ites: center;
-  justify-content: space-between;
-}
-#contact form div div {
-  width: 48%;
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-#contact form div div input {
-  font-size: 14px;
-  text-align: left;
-  padding: 7px 15px;
-  border: 1px solid #bdc3c7;
-  border-radius: 5px;
-}
-#contact form div div .error {
-  padding-left: 10px;
-  text-align: left;
-  width: 100%;
-  font-size: 12px;
-  color: red;
-  transition: opacity 1s;
-}
-#contact form div .contact-message {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  border: 1px solid #bdc3c7;
-  border-radius: 5px;
-}
-#contact form div .contact-message textarea {
-  height: 80%;
-  text-align: left;
-  font-size: 14px;
-  padding: 10px;
-  width: 90%;
-  resize: none;
-}
-#contact form div .contact-message .error {
-  height: 10%;
-}
-#contact form input[type=submit] {
-  margin-top: 20px;
-  padding: 10px 30px;
-  border: 1px solid #bdc3c7;
-  border-radius: 5px;
-  font-size: bold;
-  background-color: #bdc3c7;
-}
-#contact form input[type=submit]:hover {
-  color: white;
-  font-size: bold;
-  background-color: gray;
-  border: 1px solid gray;
-  box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.2);
-  transition: all 1s;
-}
-
-.message-notification, .error-send-email {
-  border-radius: 5px;
-  padding: 5px 10px;
-  margin-bottom: 15px;
-  transition: opacity 0.5s;
-}
-
-.message-notification {
-  background-color: #d0f2db;
-}
-
-.error-send-email {
-  background-color: #fcd6d3;
-}
-.error-send-email a:hover {
-  text-decoration: underline;
-}
-
-#about {
-  position: relative;
-  padding-top: 25vh;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-#about canvas, #canvasbg {
-  z-index: -1;
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  left: 0;
-  top: 0;
-}
-
-#about .about-content-main a {
-  z-index: 10;
-}
-
-.about-content {
-  width: 100%;
-  text-align: center;
-  margin: auto;
-}
-
-.about-content-main {
-  width: 60%;
-  margin: auto;
-  line-height: 1.5;
-  font-size: 18px;
-  text-align: left;
-}
-.about-content-main hr {
-  border: none;
-}
-.about-content-main strong {
-  font-weight: bold;
-}
-.about-content-main a {
-  cursor: pointer;
-  color: blue;
-}
-.about-content-main a:hover {
-  text-decoration: underline;
-}
-
-.about-content-second {
-  width: 100%;
-}
-.about-content-second h2 {
-  font-size: 24px;
-  font-weight: 800;
-  margin: 50px auto;
-}
-.about-content-second .about-content-second-list {
-  width: 100%;
-  height: 250px;
-  display: flex;
-}
-.about-content-second .about-content-second-list .hobby-container {
-  position: relative;
-  flex: 1;
-  height: 400px;
-  overflow: hidden;
-  animation-duration: 1s;
-  background-color: white;
-}
-.about-content-second .about-content-second-list .hobby-container img {
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-.about-content-second .about-content-second-list .hobby-container:hover img {
-  opacity: 1;
-  transition: all 1s;
-}
-.about-content-second .about-content-second-list .hobby-content {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.3);
-}
-.about-content-second .about-content-second-list .hobby-content div {
-  width: 100%;
-  color: white;
-  text-align: center;
-  font-size: 32px;
-  font-weight: bold;
-}
-
-/*# sourceMappingURL=style.css.map */
+@import"https://use.fontawesome.com/releases/v5.0.9/css/all.css";@import"https://fonts.googleapis.com/css?family=Quicksand";@import"https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css";@import"https://www.w3schools.com/w3css/4/w3.css";html,body,header,nav,h1,a,ul,li,strong,main,button,i,section,img,div,h2,p,form,fieldset,label,input,textarea,span,article,footer,time,small{margin:0;padding:0;border:0;outline:0;font:inherit;color:#666;text-align:inherit;text-decoration:inherit;vertical-align:inherit;box-sizing:inherit;background:transparent;font-family:"Quicksand",sans-serif}ul{list-style:none}::-webkit-input-placeholder{color:gray}label{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}img{display:block;width:100%;height:auto}input[type=password],input[type=email],input[type=text]{padding:5px 10px}input[type=password],input[type=email],input[type=text],input[type=submit],textarea,button{-webkit-appearance:none;-moz-appearance:none}button,input[type=submit]{cursor:pointer}.group::after{content:"";display:block;clear:both}nav{position:fixed;padding-bottom:3px;margin-bottom:75px;z-index:5;height:6vh;top:0;width:100%;display:flex;background-color:#222;align-items:center;justify-content:space-between}nav ul{display:flex;align-items:center;height:100%;width:40%;justify-content:space-around;text-transform:uppercase;font-weight:800;font-size:18px}nav a{width:50%;height:100%}nav li{color:#fff;width:100%;height:100%;display:flex;align-items:center;justify-content:center;cursor:pointer;border-bottom:3px solid transparent;text-shadow:.1px .1px .1px #000}nav li:hover{border-bottom:3px solid #fff;transition:all 1s}.selected{border-bottom:3px solid #83cd1f;color:#83cd1f;font-weight:900;transition:all 1s}.avatar{cursor:pointer;z-index:7;position:fixed;top:20px;left:calc(50% - 5em);height:10em;width:10em;border-radius:50%;overflow:hidden;box-shadow:0 5px 5px rgba(0,0,0,.3)}.avatar img{height:100%;object-fit:cover;transition:opacity 1s}h1{font-size:36px;font-weight:999;margin-bottom:30px}.skill-title{text-align:center;width:60%;margin:auto}#skill,#project,#contact{text-align:center;padding:15em 0 5em 0}#project{background-color:#f7f7f7}.hidden{display:none}.skills{width:60%;margin:auto;display:flex;flex-wrap:wrap;align-items:center;justify-content:flex-start}.skills i{cursor:pointer;position:relative;margin:.2em;font-size:8em}.skills .icon-wordmark{padding-top:60px;text-shadow:1px 1px 2px #000;color:#fff;text-align:center;font-weight:999;position:absolute;height:100%;width:100%;top:0;left:0;font-size:24px}.skills i:hover{opacity:.5;transition:all 1s}.footer{margin-top:200px;padding-top:30px;background-color:#222;width:100%;height:15vh;text-align:center}.footer div{width:50%;margin:30px auto;display:flex;align-items:center;justify-content:space-around}.footer div i{color:#fff;font-size:48px}.footer div i:hover{transition:all 1s}.footer div .fa-linkedin:hover{color:#0073b1}.footer div .fa-weibo:hover{color:#df2029}.footer div .fa-github-square:hover{color:#fff}.footer div .fa-facebook-square:hover{color:#4267b2}.footer div .fa-instagram:hover{background-image:-webkit-linear-gradient(to right, #fa709a 0%, #fee140 100%);background-image:linear-gradient(to right, #fa709a 0%, #fee140 100%);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;color:transparent;transition:all .5s;-webkit-transition:all .5s}.footer p{margin-top:30px}.project-list{width:60%;margin:auto;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-around}.single-project{width:45%;height:250px;margin-bottom:25px}.single-project:hover{box-shadow:0 8px 25px 0 rgba(0,0,0,.3)}.single-project:hover .project-cover{opacity:0;transition:opacity 1s}.project-screenshoot{border-radius:5px;position:relative;width:100%;height:100%;overflow:hidden}.project-screenshoot img{height:100%;object-fit:cover}.project-cover{height:100%;width:100%;position:absolute;top:0;left:0;display:flex;align-items:center;justify-content:center;text-shadow:.1px .1px .1px #000;transition:opacity 1s}.project-cover h2{font-weight:bold;font-size:36px;opacity:1;text-transform:capitalize}.white{background:rgba(255,255,255,.5)}.white h2{color:#000}.black{background:rgba(0,0,0,.5)}.black h2{color:#fff}.link{position:absolute;height:100%;width:100%;top:0;left:0;background:rgba(0,0,0,.8);display:flex;flex-direction:column;justify-content:space-around;align-items:center;text-align:center;transition:background 1s ease,padding 1s linear}.link p{color:#fff;margin:0 20px}.link div{opacity:.5}.link div i{color:#fff;font-size:48px}.link div:hover{opacity:1;transition:opacity 1s}#contact{width:60%;margin:50px auto}#contact form{display:flex;flex-direction:column;align-items:center;width:100%}#contact form div{width:100%;display:flex;align-items:center;justify-content:space-between}#contact form div div{flex:1;margin:0 2em;height:150px;display:flex;flex-direction:column;justify-content:space-between}#contact form div div input{width:100%;box-sizing:border-box;font-size:14px;text-align:left;padding:7px 15px;border:1px solid #bdc3c7;border-radius:5px}#contact form div div .error{padding-left:10px;text-align:left;width:100%;font-size:12px;color:red;transition:opacity 1s}#contact form div .contact-message{display:flex;flex-direction:column;justify-content:space-between;border:1px solid #bdc3c7;border-radius:5px}#contact form div .contact-message textarea{height:80%;text-align:left;font-size:14px;padding:10px;width:90%;resize:none}#contact form div .contact-message .error{height:10%}#contact form input[type=submit]{margin-top:20px;padding:10px 30px;border:1px solid #bdc3c7;border-radius:5px;font-size:bold;background-color:#bdc3c7}#contact form input[type=submit]:hover{color:#fff;font-size:bold;background-color:gray;border:1px solid gray;box-shadow:0 8px 30px rgba(0,0,0,.2);transition:all 1s}.message-notification,.error-send-email{border-radius:5px;padding:5px 10px;margin-bottom:15px;transition:opacity .5s}.message-notification{background-color:#d0f2db}.error-send-email{background-color:#fcd6d3}.error-send-email a:hover{text-decoration:underline}#about{position:relative;padding-top:25vh;background-color:rgba(255,255,255,.5)}#about canvas,#canvasbg{z-index:-1;position:absolute;height:100vh;width:100vw;left:0;top:0}#about .about-content-main a{z-index:10}.about-content{width:100%;text-align:center;margin:auto}.about-content-main{width:60%;margin:auto;line-height:1.5;font-size:18px;text-align:left}.about-content-main hr{border:none}.about-content-main strong{font-weight:bold}.about-content-main a{cursor:pointer;color:blue}.about-content-main a:hover{text-decoration:underline}.about-content-second{width:100%}.about-content-second h2{font-size:24px;font-weight:800;margin:50px auto}.about-content-second .about-content-second-list{width:100%;height:250px;display:flex}.about-content-second .about-content-second-list .hobby-container{position:relative;flex:1;height:400px;overflow:hidden;animation-duration:1s;background-color:#fff}.about-content-second .about-content-second-list .hobby-container img{height:100%;object-fit:cover;opacity:.8}.about-content-second .about-content-second-list .hobby-container:hover img{opacity:1;transition:all 1s}.about-content-second .about-content-second-list .hobby-content{height:100%;width:100%;display:flex;align-items:center;position:absolute;top:0;left:0;background:rgba(0,0,0,.3)}.about-content-second .about-content-second-list .hobby-content div{width:100%;color:#fff;text-align:center;font-size:32px;font-weight:bold}@media only screen and (max-width: 960px){.avatar{left:calc(50% - 2.5em);width:5em;height:5em}#about,#project,#contact{padding-top:15vh;margin:0 auto}.footer{margin-top:10vh}.footer div{width:90%}.footer div i{font-size:2em}.footer p{font-size:.5em}.about-content-main,.project-list,#contact{width:85%}.skills{width:90%}.single-project{width:90%;margin:1em auto}.skills i{font-size:3.5em}.skills .icon-wordmark{font-size:1em}#contact form div{flex-direction:column}#contact form div div > input,#contact form div div.contact-message{margin:1em auto 0 auto}}/*# sourceMappingURL=style.css.map */
