--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -62,9 +62,9 @@ nav {
 	z-index: 7;
 	position: fixed;
 	top: 20px;
-	left: 45%;
-	height: 150px;
-	width: 150px;
+	left: calc(50% - 5em);
+	height: 10em;
+	width: 10em;
 	border-radius: 50%;
 	overflow: hidden;
     box-shadow: 0px 5px 5px rgba(0,0,0,0.3);
@@ -105,12 +105,15 @@ h1{
 .skills{
 	width: 60%;
 	margin: auto;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: flex-start;
 	i{
 		cursor: pointer;
 		position: relative;
-		margin: 15px;
-		float: left;
-		font-size: 148px;
+		margin: 0.2em;
+		font-size: 8em;
 	}
 	.icon-wordmark{
 		padding-top: 60px;
@@ -119,8 +122,8 @@ h1{
 		text-align: center;
 		font-weight: 999;
 		position: absolute;
-		height: 148px;
-		width: 148px;
+		height: 100%;
+		width: 100%;
 		top: 0;
 		left: 0;
 		font-size: 24px;
@@ -183,7 +186,6 @@ h1{
 
 .project-list{
 	width: 60%;
-	min-width: 600px;
 	margin: auto;
 	display: flex;
 	flex-wrap: wrap;
@@ -294,15 +296,18 @@ h1{
 		div{
 			width: 100%;
 			display: flex;
-			align-ites: center;
+			align-items: center;
 			justify-content: space-between;			
 			div{
-				width: 48%;
+				flex: 1;
+				margin: 0 2em;
 				height: 150px;
 				display: flex;
 				flex-direction: column;
 				justify-content: space-between;
 				input{
+					width: 100%;
+					box-sizing: border-box;
 					font-size: 14px;
 					text-align: left;
 					padding: 7px 15px;
@@ -472,3 +477,6 @@ h1{
 		}
 	}
 }
+
+@import './media';
+
